--- a/client/user/src/mealorder/menu/meal-order-vendor-menu.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menu.html
@@ -43,18 +43,13 @@
                 display: flex;
             }
 
-            div[role="listbox"] {
-                border: 1px solid #e5e5e5;
-            }
-
             paper-item {
                 font-size: 15px;
-                padding: 0;
-                width: 100%;
-
+                padding: 5px 5%;
+                width: 90%;
             }
 
-            .menu-dashboard {
+            .menu-dishes {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -62,7 +57,7 @@
                 border-bottom: 1px solid #fcfcfc;
             }
 
-            .category {
+            .wrapper {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
@@ -88,60 +83,85 @@
                 width: 45%;
                 text-align: right;
             }
+
+            .collapsed {
+                display: none;
+            }
+
+            .expanded {
+                display: block;
+                transition: background-color 1s linear;
+            }
+
+            .menu-caption {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-size: 16px;
+                width: 100%;
+            }
+
+            @media only screen and (max-width: 600px) {
+                paper-item {
+                    padding: 2px 2%;
+                }
+            }
         </style>
+        <div class="wrapper">
+            <paper-item on-click="_toggle" class="menu-caption">
+                <div class="menu-caption">
+                    [[menu.name]]
+                    <paper-icon-button id="expand" icon="expand-less"></paper-icon-button>
+                </div>
+            </paper-item>
+        </div>
+        <div id="menu" class="expanded">
+            <dom-repeat items="[[menu.categories]]" as="item">
+                <template>
+                    <dom-if if="[[item.dishes.length]]">
+                        <template>
+                            <div>
+                                <div class="wrapper">
+                                    <paper-item>
+                                        <div class="dish-title bolder">
+                                            [[item.categoryName]]
+                                        </div>
+                                        <div class="dish-price bolder">
+                                            Цена
+                                        </div>
+                                        <div class="add-dish-icon">
 
-        <dom-repeat items="[[items]]" as="item">
-            [[item.categoryName]]
-            <template>
-                <dom-if if="[[item.dishes.length]]">
-                    <template>
-                        <div class="vendor">
+                                        </div>
+                                    </paper-item>
+                                </div>
 
-                            <div class="category">
-                                <paper-item>
-                                    <div class="dish-title bolder">
-                                        [[item.categoryName]]
-                                    </div>
-                                    <div class="dish-price bolder">
-                                        Цена
-                                    </div>
-                                    <div class="add-dish-icon">
-                                        <paper-icon-button
-                                                icon=""></paper-icon-button>
-                                    </div>
-                                </paper-item>
+                                <dom-repeat items="[[item.dishes]]" as="dish">
+                                    <template>
+                                        <div class="menu-dishes">
+                                            <paper-item>
+                                                <div class="dish-title">
+                                                    [[dish.title]]
+                                                </div>
+                                                <div class="dish-price">
+                                                    [[dish.price]]₴
+                                                </div>
+                                                <div class="add-dish-icon">
+                                                    <paper-icon-button icon="add"
+                                                                       on-click="addDish"></paper-icon-button>
+                                                </div>
+                                            </paper-item>
+                                        </div>
+                                    </template>
+                                </dom-repeat>
                             </div>
-
-                            <dom-repeat items="[[item.dishes]]" as="dish">
-                                <template>
-                                    <div class="menu-dashboard">
-                                        <paper-item>
-                                            <div class="dish-title">
-                                                [[dish.title]]
-                                            </div>
-                                            <div class="dish-price">
-                                                [[dish.price]]₴
-                                            </div>
-                                            <div class="add-dish-icon">
-                                                <paper-icon-button icon="add"
-                                                                   on-click="_addDish"></paper-icon-button>
-                                            </div>
-                                        </paper-item>
-                                    </div>
-                                </template>
-                            </dom-repeat>
-                        </div>
-                    </template>
-                </dom-if>
-            </template>
-        </dom-repeat>
+                        </template>
+                    </dom-if>
+                </template>
+            </dom-repeat>
+        </div>
     </template>
     <script>
-        /**
-         * vendor-menu represents a menu of a vendor for current date
-         *
-         * <p>Is adopted for both desktop and mobile.
-         */
+
         class MealOrderVendorMenu extends Polymer.Element {
             static get is() {
                 return 'meal-order-vendor-menu';
@@ -154,14 +174,37 @@
                      *
                      * Initial state represents its structure.
                      */
-                    items: {
-                        type: Array,
-                        value: [{categoryName: '', dishes: [{title: '', price: ''}, {}]}, {}]
+                    menu: {
+                        type: Array
                     }
                 }
             };
 
-            _addDish(e) {
+            _getExpandIcon() {
+                if (this.$.menu.className === 'expanded') {
+                    console.log('expanded');
+                    return 'expand-less';
+                }
+                else {
+                    console.log('collapsed');
+
+                    return 'expand-more';
+                }
+            }
+
+            _toggle(e) {
+                if (this.$.menu.className === 'collapsed') {
+                    this.$.menu.className = 'expanded';
+                    this.$.expand.icon = 'expand-less';
+                }
+                else {
+                    this.$.menu.className = 'collapsed';
+                    this.$.expand.icon = 'expand-more';
+                }
+                this.dispatchEvent(new CustomEvent('vendor-menu-resize'));
+            }
+
+            addDish(e) {
                 const dish = {};
                 dish.vendor = this.vendor;
                 dish.name = e.model.__data.dish.title;
@@ -173,3 +216,4 @@
         window.customElements.define(MealOrderVendorMenu.is, MealOrderVendorMenu);
     </script>
 </dom-module>
+
