--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -35,7 +35,7 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
 <link rel="import" href="shell/redux-store.html">
-<link rel="import" href="menu/meal-order-menu-order.html">
+<link rel="import" href="menu/meal-order-menu-container.html">
 <dom-module id="meal-order-client-app">
     <template>
         <style>
@@ -251,7 +251,7 @@
                         attr-for-selected="name"
                         fallback-selection="view404"
                         role="main">
-                    <meal-order-menu-order></meal-order-menu-order>
+                    <meal-order-menu-container></meal-order-menu-container>
                 </iron-pages>
 
             </app-header-layout>
