Add border for menu

--- a/client/user/src/mealorder/menu/meal-order-vendor-menus.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menus.html
@@ -58,6 +58,7 @@
                 --iron-list-items-container: {
                     width: 70%;
                     margin: 2% auto;
+                    border-bottom: 1px solid #ddd;
                 };
             }
 
