--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -20,8 +20,8 @@
 
 <script>
     MealOrderApp.UserAction = {
-        MENU_FOR_DAY: "MENU_FOR_DAY",
-        CART_FOR_DAY: 'CART_FOR_DAY',
-        ADD_DISH: "ADD_DISH",
+        CHANGE_CURRENT_MENU: "CHANGE_CURRENT_MENU",
+        CHANGE_CURRENT_CART: 'CHANGE_CURRENT_CART',
+        ADD_DISH_TO_CART: "ADD_DISH",
     }
 </script>
