--- a/client/user/src/mealorder/menu/meal-order-user-order.html
+++ b/client/user/src/mealorder/menu/meal-order-user-order.html
@@ -20,16 +20,8 @@
 <script src="../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../../bower_components/paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/iron-icons/iron-icons.html">
-<link rel="import"
-      href="../../../bower_components/app-layout/app-drawer-layout/app-drawer-layout.html">
-<link rel="import" href="../../../bower_components/app-layout/app-drawer/app-drawer.html">
-<link rel="import" href="../../../bower_components/app-layout/app-header/app-header.html">
-<link rel="import"
-      href="../../../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import"
-      href="../../../bower_components/app-layout/app-scroll-effects/app-scroll-effects.html">
+
 
 <dom-module id="meal-order-user-order">
     <template>
@@ -70,10 +62,10 @@
 
         </style>
         <div class="vendor">
-            <div>[[menu.vendor]]</div>
+            <div>[[order.vendor]]</div>
             <paper-icon-button icon="delete" class="icon-delete"></paper-icon-button>
         </div>
-        <dom-repeat items="[[menu.dishes]]" as="dish">
+        <dom-repeat items="[[order.dishes]]" as="dish">
             <template>
                 <div class="order-details">
                     <div class="order-title">[[dish.title]]</div>
@@ -83,7 +75,6 @@
                 </div>
             </template>
         </dom-repeat>
-        <paper-button on-click="log"></paper-button>
     </template>
     <script>
         /**
@@ -101,7 +92,10 @@
 
             static get properties() {
                 return {
-                    menu: {
+                    /**
+                     * Order for a current vendor.
+                     */
+                    order: {
                         type: Array
                     }
                 }
@@ -109,8 +103,8 @@
 
             _removeDish(e) {
                 const dish = {};
-                dish.vendor = this.menu.vendor;
-                dish.name = this.menu.dishes[e.model.index].title;
+                dish.vendor = this.order.vendor;
+                dish.name = this.order.dishes[e.model.index].title;
                 this.dispatchEvent(new CustomEvent('dish-removed', {detail: dish}));
             }
         }
