--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -52,7 +52,7 @@
                 right: 300px;
             }
 
-            app-header .main-title {
+            #main-title {
                 font-size: 1.375em;
             }
 
@@ -64,30 +64,20 @@
                 display: none;
             }
 
-            app-header app-toolbar .container {
+            app-header app-toolbar .route-title {
                 display: flex;
                 width: 100%;
                 align-items: center;
                 justify-content: space-between;
             }
 
-            app-header app-toolbar .container .order-container {
-                display: flex;
-            }
-
-            app-header app-toolbar .container .date-container {
-                display: flex;
-                margin-left: 10px;
-                align-items: center;
-            }
-
-            app-header .history-of-orders a {
+            app-header .route-title a {
                 font-size: 0.8em;
                 text-decoration: none;
                 color: white;
             }
 
-            app-header .history-of-orders a:hover {
+            app-header .route-title a:hover {
                 color: #179EFF;
             }
 
@@ -96,60 +86,9 @@
                 color: white;
             }
 
-            app-header .calendar {
-                font-weight: lighter;
+            app-header .app-toolbar-content {
                 font-size: 0.75em;
             }
-
-            app-header .order {
-                font-size: 0.75em;
-            }
-
-            .order-date {
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                width: 100%
-            }
-
-            .order-date .order {
-                font-size: 24px;
-            }
-
-            .order-date .day {
-                font-size: 0.7em;
-                font-weight: lighter;
-                text-align: center;
-            }
-
-            .order-date .day-of-the-week {
-                font-size: 22px;
-            }
-
-            @media only screen and (max-width: 600px) {
-
-                .history-of-orders {
-                    display: none;
-                }
-
-                app-header .history-icon {
-                    display: block;
-                }
-
-                app-header .date-container .date-range-icon {
-                    display: none;
-                }
-
-                app-header .date-container .calendar {
-                    display: none;
-                }
-
-            }
-
-            app-drawer.history {
-                --app-drawer-width: 300px;
-            }
-
 
             app-drawer {
                 --app-drawer-content-container: {
@@ -157,7 +96,28 @@
                 }
             }
 
-            .menu-history {
+            .app-toolbar-header {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                width: 100%
+            }
+
+            .app-toolbar-header .app-toolbar-content {
+                font-size: 24px;
+            }
+
+            #day {
+                font-size: 0.7em;
+                font-weight: lighter;
+                text-align: center;
+            }
+
+            #day-of-the-week {
+                font-size: 22px;
+            }
+
+            #menu-history {
                 margin-right: 44px;
             }
 
@@ -166,6 +126,16 @@
                 display: flex;
                 justify-content: space-around;
                 align-items: center;
+            }
+
+            @media only screen and (max-width: 600px) {
+                .route-title {
+                    display: none;
+                }
+
+                app-header .history-icon {
+                    display: block;
+                }
             }
         </style>
 
@@ -184,31 +154,33 @@
                             attr-for-selected="name"
                             fallback-selection="view404"
                             role="main">
+
                     <app-toolbar name="menu">
-                        <div class="order-date">
-                            <div class="order">Заказ</div>
+                        <div class="app-toolbar-header">
+                            <div class="app-toolbar-content">Заказ</div>
+                            <div>
+                                <div id="day">Пн</div>
+                                <div id="day-of-the-week">21</div>
+                            </div>
                         </div>
                     </app-toolbar>
 
                     <app-toolbar name="history">
-                        <div class="order-date">
-                            <div class="order">История заказов</div>
+                        <div class="app-toolbar-header">
+                            <div class="app-toolbar-content">История заказов</div>
                         </div>
                     </app-toolbar>
                 </iron-pages>
-                <meal-order-drawer order="[[order]]" currentDate="[[currentDate]]"></meal-order-drawer>
+
+                <meal-order-drawer order="[[order]]"
+                                   on-changed-history-date="_changeHistoryDate"></meal-order-drawer>
             </app-drawer>
 
             <app-header-layout>
                 <app-header slot="header" reveals effects="waterfall">
                     <app-toolbar>
-                        <div class="container">
-                            <div class="order-container">
-                                <div class="main-title">Заказ обедов</div>
-                                <div class="date-container">
-                                    <div class="calendar">Март&nbsp;2018</div>
-                                </div>
-                            </div>
+                        <div class="route-title">
+                            <div id="main-title">Заказ обедов</div>
                             <iron-pages
                                     selected="[[routeData.page]]"
                                     attr-for-selected="name"
@@ -216,27 +188,31 @@
                                     role="main">
 
                                 <div name="menu">
-                                    <div class="history-of-orders"><a href="/#/history/">История заказов</a></div>
+                                    <div class="route-title"><a href="/#/history/">История
+                                        заказов</a></div>
                                     <div class="icon-container">
                                         <a href="/#/history/">
-                                            <iron-icon class="history-icon" icon="maps:icons:history"></iron-icon>
+                                            <iron-icon class="history-icon"
+                                                       icon="maps:icons:history"></iron-icon>
                                         </a>
                                         <div>
-                                            <iron-icon class="order" icon="icons:shopping-cart"
+                                            <iron-icon class="app-toolbar-content" icon="icons:shopping-cart"
                                                        drawer-toggle></iron-icon>
                                         </div>
                                     </div>
                                 </div>
 
                                 <div name="history">
-                                    <div class="history-of-orders menu-history"><a href="/#/menu/">Сделать заказ</a>
+                                    <div id="menu-history" class="route-title"><a href="/#/menu/">Сделать
+                                        заказ</a>
                                     </div>
                                     <div class="icon-container">
                                         <a href="/#/menu/">
-                                            <iron-icon class="history-icon" icon="maps:icons:create"></iron-icon>
+                                            <iron-icon class="history-icon"
+                                                       icon="maps:icons:add"></iron-icon>
                                         </a>
                                         <div>
-                                            <iron-icon class="order" icon="icons:date-range"
+                                            <iron-icon class="app-toolbar-content" icon="icons:date-range"
                                                        drawer-toggle></iron-icon>
                                         </div>
                                     </div>
@@ -245,13 +221,13 @@
                         </div>
                     </app-toolbar>
                 </app-header>
-
                 <iron-pages
                         selected="[[routeData.page]]"
                         attr-for-selected="name"
                         fallback-selection="view404"
                         role="main">
-                    <meal-order-menu-container name="menu" on-dish-added="_addDishToOrder"></meal-order-menu-container>
+                    <meal-order-menu-container name="menu"
+                                           on-dish-added="_addDishToOrder"></meal-order-menu-container>
                 </iron-pages>
 
             </app-header-layout>
