--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -102,13 +102,13 @@
         /**
          * menu-order is container for vendors' menus and navigation.
          *
-         * <p>Is adopted for both desktop and mobile.
          * Contains a menu for the current date and tabs for quick date navigation.
          *
-         * Fires redux `menuForDay` event
+         * Fires `menuForDay` event
+         *
          * @customElement
          * @polymer
-         * @ReduxMixin
+         * @appliesMixin ExlibrisApplication.ReduxMixin
          */
         class MealOrderMenuContainer extends MealOrderApp.ReduxMixin(Polymer.Element) {
             static get is() {
