--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -27,6 +27,7 @@
                 year: '2018',
                 month: '03',
                 day: '21',
+                dayOfTheWeek: 'Ср',
             },
             hasMenu: true
         },
@@ -35,6 +36,7 @@
                     year: '2018',
                     month: '03',
                     day: '22',
+                    dayOfTheWeek: 'Чт',
                 },
                 hasMenu: true
             },
@@ -43,6 +45,7 @@
                     year: '2018',
                     month: '03',
                     day: '23',
+                    dayOfTheWeek: 'Пт',
                 },
                 hasMenu: true
             },
@@ -51,6 +54,7 @@
                     year: '2018',
                     month: '03',
                     day: '24',
+                    dayOfTheWeek: 'Сб',
                 },
                 hasMenu: false
             },
@@ -59,6 +63,7 @@
                     year: '2018',
                     month: '03',
                     day: '25',
+                    dayOfTheWeek: 'Вс',
                 },
                 hasMenu: false
             }
@@ -67,6 +72,7 @@
                     year: '2018',
                     month: '03',
                     day: '26',
+                    dayOfTheWeek: 'Пн',
                 },
                 hasMenu: true
             }
@@ -75,6 +81,7 @@
                     year: '2018',
                     month: '03',
                     day: '27',
+                    dayOfTheWeek: 'Вт',
                 },
                 hasMenu: true
             }
@@ -83,6 +90,7 @@
                     year: '2018',
                     month: '03',
                     day: '28',
+                    dayOfTheWeek: 'Ср',
                 },
                 hasMenu: true
             }];
