--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -36,6 +36,7 @@
 <link rel="import" href="../../bower_components/iron-icons/maps-icons.html">
 <link rel="import" href="shell/redux-store.html">
 <link rel="import" href="menu/meal-order-menu-container.html">
+<link rel="import" href="menu/meal-order-drawer.html">
 <dom-module id="meal-order-client-app">
     <template>
         <style>
